fixed input having too much padding

--- a/echozone/src/App.css
+++ b/echozone/src/App.css
@@ -457,7 +457,7 @@ html, body {
   font-family: var(--sub-font);
 	text-align: center;
   font-size: 0.85rem;
-  padding: 12px 50px;
+  padding: 12px 30px;
   background: rgba(255, 255, 255, 0.95);
   border: 2px solid rgba(0, 0, 0, 0.15);
   border-radius: 6px;
@@ -469,6 +469,7 @@ html, body {
   outline: none;
 	max-height: 25%;
   max-width: 80%;
+	width: 80%;
   box-sizing: border-box;
 }
 
